# random-crowdsourced

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: fly-deploy.yml
assets/: bun.lockb  package.json  prettier.config.js
assets/static/: 404.html  style.css
assets/templates/: 404.html  about.html  index.html  layout.html  list_item.html  something_went_wrong.html  stats.html
src/: api.rs  error.rs  headers.rs  layers.rs  main.rs  message.rs  middleware.rs  site.rs  state.rs  websocket.rs
static/: 404.html  index.html  style.css
