[package]
name = "random-crowdsourced"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.89"
askama = { git = "https://github.com/djc/askama", features = [
    "with-axum",
], rev = "66169add86bfce25cd16a2dc58a4ea825aee2be4" }
askama-axum = { git = "https://github.com/djc/askama", package = "askama_axum", rev = "66169add86bfce25cd16a2dc58a4ea825aee2be4" }
axum = { version = "0.7.5", features = ["macros", "ws"] }
futures-util = "0.3.30"
redis = { version = "0.27.2", features = ["tokio-comp", "uuid"] }
rubenvy = "0.1.1"
secrecy = "0.10.2"
sentry = { version = "0.34.0", default-features = false, features = [
    "anyhow",
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "reqwest",
    "rustls",
    "tower",
    "tower-axum-matched-path",
    "tracing",
] }
serde = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full", "time"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = [
    "fs",
    "request-id",
    "trace",
    "util",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v7"] }
