[package]
name = "random-crowdsourced"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.89"
rinja = "0.3.5"
aws-config = "1.5.15"
aws-sdk-s3 = "1.72.0"
axum = { version = "0.8.1", features = ["macros", "ws"] }
# Needed for redis 0.28 for ping command
deadpool-redis = { git = "https://github.com/bikeshedder/deadpool", rev = "387f9e25d2d6197aab4ed6e3218cc6d29a2b35f9" }
futures-util = "0.3.30"
redis = { version = "0.28.0", features = ["tokio-comp", "uuid"] }
rubenvy = "0.1.1"
sentry = { version = "0.36.0", default-features = false, features = [
    "anyhow",
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "reqwest",
    "rustls",
    "tower",
    "tower-axum-matched-path",
    "tracing",
] }
serde = "1.0.210"
serde_json = "1.0.128"
thiserror = "2.0.11"
tokio = { version = "1.40.0", features = ["full", "time"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["fs", "limit", "request-id", "timeout", "trace", "util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v7"] }
axum-extra = "0.10.0"
secrecy = "0.10.3"
